--- a/frontend/src/Components/Coach/Tournament/main.css
+++ b/frontend/src/Components/Coach/Tournament/main.css
@@ -10,3 +10,12 @@
 .error {
   color: red;
 }
+.main-data {
+  width: 75rem;
+}
+.about-data {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: x-large;
+  display: flex;
+  flex-direction: column;
+}
