--- a/frontend/src/Components/AdminPage/AdminTournament/RightColumn/right.css
+++ b/frontend/src/Components/AdminPage/AdminTournament/RightColumn/right.css
@@ -5,7 +5,7 @@
   margin-right: 2.5rem;
   background-color: #f0f0f0;
 }
-.info-coach {
+.info-admin {
   background-color: gainsboro;
   padding: 1.5rem;
   margin: 1rem;
