--- a/frontend/src/Components/Coach/CoachTournament/RightColumn/right.css
+++ b/frontend/src/Components/Coach/CoachTournament/RightColumn/right.css
@@ -1,18 +1,20 @@
-.right-column {
+.right-column-coach {
   flex: 0.75;
   padding: 16px;
   margin-left: 1rem;
   margin-right: 2.5rem;
-  background-color: #f0f0f0;
+  /* background-color: #f0f0f0; */
 }
 .info-coach {
-  background-color: gainsboro;
+  background-color: white;
   padding: 1.5rem;
   margin: 1rem;
+  border: 1px solid black;
 }
-.btn-dwld {
-  background-color: black;
-  color: white;
+.btn-dwld-coach {
+  background-color: rgb(143, 103, 245);
+  color: black;
+  font-weight: 700;
   padding: 1rem;
   margin: 0.5rem 1rem;
   border-radius: 10px;
